--- a/main/templates/main/aspirantRegistration.htm
+++ b/main/templates/main/aspirantRegistration.htm
@@ -4,7 +4,7 @@
 
 <form method="POST">
   {% csrf_token %}
-    <legend class="border-bottom mb-4">BITSAT Aspirant Details</legend>
+    <legend class="border-bottom mb-4">Hi there! Just a few steps more before we can meet :)</legend>
     <div class="row">
       <div class="form-group col-6">
         <label for="name">Name</label>
