--- a/main/templates/main/login.htm
+++ b/main/templates/main/login.htm
@@ -10,7 +10,7 @@
       <div class="card">
         <div class="card-body text-center">
           <h5 class="card-title">BITSAT Aspirants' Login</h5>
-          <p class="card-text">Login with your registered e-mail ID by clicking on the button below.</p>
+          <p class="card-text">Login with your Google account by clicking on the button below.</p>
           <a href="{% provider_login_url 'google' %}" class="btn btn-primary" style="border-radius: 25px;"><i class="fa fa-google mr-2"></i>Login with Google</a>
         </div>
       </div>
