--- a/main/templates/main/login.htm
+++ b/main/templates/main/login.htm
@@ -4,14 +4,14 @@
 
 {% load socialaccount %}
 <div class="text-center py-5">
-  <h2 class="mb-5">Log in to BITSAT Queries Contact Finder</h2>
+  <h2 class="mb-5">Sign in to BITSAT Queries Contact Finder</h2>
   <div class="row">
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body text-center">
           <h5 class="card-title">BITSAT Aspirants' Login</h5>
-          <p class="card-text">Login with your Google account by clicking on the button below.</p>
-          <a href="{% provider_login_url 'google' %}" class="btn btn-primary" style="border-radius: 25px;"><i class="fa fa-google mr-2"></i>Login with Google</a>
+          <p class="card-text">Sign in with your Google account by clicking on the button below.</p>
+          <a href="{% provider_login_url 'google' %}" class="btn btn-primary" style="border-radius: 25px;"><i class="fa fa-google mr-2"></i>Sign in with Google</a>
         </div>
       </div>
     </div>
@@ -20,8 +20,8 @@
       <div class="card">
         <div class="card-body text-center">
           <h5 class="card-title">BITS Students' Login</h5>
-          <p class="card-text">Login with your BITS Email by clicking on the button below.</p>
-          <a href="{% provider_login_url 'google' %}" class="btn btn-info" style="border-radius: 25px;"><i class="fas fa-user-graduate mr-2"></i>Login with BITS Email</a>
+          <p class="card-text">Sign in with your BITS Email by clicking on the button below.</p>
+          <a href="{% provider_login_url 'google' %}" class="btn btn-info" style="border-radius: 25px;"><i class="fas fa-user-graduate mr-2"></i>Sign in with BITS Email</a>
         </div>
       </div>
     </div>
