--- a/main/templates/main/studentRegistration.htm
+++ b/main/templates/main/studentRegistration.htm
@@ -29,7 +29,7 @@
       </div>
       <div class="form-group col-6">
         <label for="phone_number">Phone Number</label>
-        <input type="number" class="form-control" id="phone_number" name="phone_number" required>
+        <input type="number" class="form-control" id="phone_number" name="phone_number">
       </div>
       <div class="form-group col-6">
         <label for="fb_profile">Facebook Profile Link</label>
